added language switcher and content translation

--- a/src/locales/servicesUa.json
+++ b/src/locales/servicesUa.json
@@ -1,4 +1,5 @@
-[
+{
+  "cards": [
     {
       "title": "Лендінг для бізнесу",
       "text": "Це сайт, який складається з однієї сторінки. Він продає лише один товар чи послугу.",
@@ -20,3 +21,4 @@
       "description": "Все про створення інтернет-магазину, функціонал, інтеграції."
     }
   ]
+}
