fix header + hero

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,6 +1,6 @@
 {
   "hero_title": "We create websites that bring results",
-  "get_consultation": "Get a consultation",
+  "get_consultation": "Order a consultation",
   "services": "Services",
   "about": "About us",
   "projects": "Projects",
