--- a/public/locales/ua/common.json
+++ b/public/locales/ua/common.json
@@ -1,6 +1,6 @@
 {
   "hero_title": "Створюємо сайти, які приносять результат",
-  "get_consultation": "Отримати консультацію",
+  "get_consultation": "Замовити консультацію",
   "services": "Послуги",
   "about": "Про нас",
   "projects": "Проекти",
