fix styles for modal card

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -8,7 +8,7 @@
   "contacts": "Contacts",
   "consultation": "Consultation",
 
-  "services_title": "Comprehensive services",
+  "services_title": "Comprehensive services for online presence",
 
   "about_title": "About us",
 
