--- a/public/locales/ua/common.json
+++ b/public/locales/ua/common.json
@@ -8,7 +8,7 @@
   "contacts": "Контакти",
   "consultation": "Консультація",
 
-  "services_title": "Комплексні послуги",
+  "services_title": "Компексні послуги для онлайн присутності",
 
   "about_title": "Про нас",
 
