--- a/public/locales/ua/services.json
+++ b/public/locales/ua/services.json
@@ -2,23 +2,53 @@
   "cards": [
     {
       "title": "Лендінг для бізнесу",
-      "text": "Це сайт, який складається з однієї сторінки. Він продає лише один товар чи послугу.",
-      "description": "Детальний опис лендінгу для бізнесу: структура, переваги, цільові аудиторії тощо."
+      "text": "Це невеликий односторінковий сайт, який закликає клієнта зробити одну конкретну дію: наприклад, підписатися на розсилку або замовити товар.",
+      "description": [
+        "Ідеальний спосіб просування нового продукту.",
+        "За допомогою лендінгу, ви можете представити потенційним клієнтам новий продукт. Ліди матимуть можливість почитати про особливості та переваги продукту на веб-сторінці. Таким чином, сконцентруєте їхню увагу на нових продуктах чи послугах.",
+        "Простий процес прийняття рішень.",
+        "На лендінгу ви надаєте відвідувачам інформацію про один продукт, що пришвидшує процес прийняття рішень. Вони можуть зосередитися на відповідній інформації без будь-яких інших відволікань та вирішити, чи хочуть вони йти далі."
+      ]
     },
     {
       "title": "Корпоративний сайт",
-      "text": "Сайт для представлення компанії, її послуг, команди та контактів.",
-      "description": "Детальний опис корпоративного сайту, приклади структур та підходів."
+      "text": "Це сайт з певним каталогом, за допомогою якого відбувається прямий продаж товарів споживачеві, враховуючи доставку.",
+      "description": {
+        "paragraphs": [
+          "Корпоративний сайт – це офіційне представництво компанії в Інтернеті.",
+          "Як правило, такий ресурс містить історію, місію, цінності та вакансії компанії. Також тут розміщуються новини, контакти та можуть бути описані технологічні процеси.",
+          "Перелік цілей для створення корпоративного веб-сайту можна розширити. Вони залежать від того, якої мети хоче досягнути власник."
+        ],
+        "listTitle": "Основні цілі його створення такі:",
+        "list": [
+          "побудова впізнаваного бренду;",
+          "залучення клієнтів, партнерів та співробітників;",
+          "інформування відвідувачів про свою діяльність і продукцію."
+        ]
+      }
     },
     {
       "title": "Сайт візитка",
-      "text": "Невеликий сайт з короткою інформацією про компанію або особу.",
-      "description": "Розширена інформація про сайт-візитку та коли він ефективний."
+      "text": "Це віртуальна візитна картка компанії або окремої людини. Мета  — познайомити потенційних клієнтів із брендом або його послугами.",
+      "description": {
+        "paragraphs": [
+          "Сайт-візитка — це віртуальна візитна картка компанії або окремої людини.",
+          "Це важливий інструмент для презентації послуг компанії або особистого бренду. Він надає інформацію про вас або ваш бізнес",
+          "За допомогою такого сайту ви можете залучати нових клієнтів і підтримувати інтерес існуючих. Наприклад, на сайті можна вести корисний блог або розповідати про акції."
+        ],
+        "listTitle": "Стандартні розділи сайту-візитки:",
+        "list": ["Інформація про компанію.", "Каталог.", "Контакти."]
+      }
     },
     {
       "title": "Інтернет магазин",
-      "text": "Сайт для продажу товарів онлайн з кошиком і оплатою.",
-      "description": "Все про створення інтернет-магазину, функціонал, інтеграції."
+      "text": "Це сайт з певним каталогом, за допомогою якого відбувається прямий продаж товарів споживачеві, враховуючи доставку.",
+      "description": [
+        "Інтернет-магазин — це вебсайт із каталогом товарів, що забезпечує пряму реалізацію продукції споживачеві, включаючи її доставку.",
+        "Уся взаємодія — від ознайомлення з товаром і оформлення замовлення до укладання угоди — відбувається безпосередньо на сайті. Головна відмінність інтернет-магазину від традиційного полягає у відсутності потреби у фізичній інфраструктурі.",
+        "Якщо звичайний магазин потребує торгового залу, персоналу, вітрин та іншого обладнання, то онлайн-магазин реалізує всі ці функції за допомогою програмних засобів.",
+        "Відкриття власного інтернет-магазину — це крок до вищого рівня обслуговування клієнтів, що сприяє не лише зростанню продажів, а й покращенню іміджу компанії в очах споживачів."
+      ]
     }
   ]
 }
