--- a/public/locales/ua/services.json
+++ b/public/locales/ua/services.json
@@ -33,7 +33,7 @@
       "description": {
         "paragraphs": [
           "Сайт-візитка — це віртуальна візитна картка компанії або окремої людини.",
-          "Це важливий інструмент для презентації послуг компанії або особистого бренду. Він надає інформацію про вас або ваш бізнес",
+          "Це важливий інструмент для презентації послуг компанії або особистого бренду. Він надає інформацію про вас або ваш бізнес.",
           "За допомогою такого сайту ви можете залучати нових клієнтів і підтримувати інтерес існуючих. Наприклад, на сайті можна вести корисний блог або розповідати про акції."
         ],
         "listTitle": "Стандартні розділи сайту-візитки:",
