fix mobile menu

--- a/public/locales/en/services.json
+++ b/public/locales/en/services.json
@@ -49,6 +49,16 @@
         "If a regular store requires a sales floor, staff, display cases, and other equipment, an online store implements all these functions using software.",
         "Opening your own online store is a step towards a higher level of customer service, which contributes not only to increased sales, but also to improving the company's image in the eyes of consumers."
       ]
+     },
+    {
+      "title": "Web applications",
+      "text": "Development of web applications of any complexity - from personal accounts to CRM systems.",
+      "description": [
+        "?????????????",
+        "?????????????",
+        "??????????????????",
+        "?????????????"
+      ]
     }
   ]
 }
