--- a/public/locales/ua/services.json
+++ b/public/locales/ua/services.json
@@ -49,6 +49,16 @@
         "Якщо звичайний магазин потребує торгового залу, персоналу, вітрин та іншого обладнання, то онлайн-магазин реалізує всі ці функції за допомогою програмних засобів.",
         "Відкриття власного інтернет-магазину — це крок до вищого рівня обслуговування клієнтів, що сприяє не лише зростанню продажів, а й покращенню іміджу компанії в очах споживачів."
       ]
+    },
+    {
+      "title": "Веб додатки",
+      "text": "Розробка веб-додатків будь-якої складності- від особистих кабінетів до CRM систем.",
+      "description": [
+        "?????????????",
+        "?????????????",
+        "??????????????????",
+        "?????????????"
+      ]
     }
   ]
 }
