fix styles for advantages + fix text

--- a/public/locales/en/advantages.json
+++ b/public/locales/en/advantages.json
@@ -1,9 +1,9 @@
 {
   "items": [
-    "Personalized approach — we create a unique design for each client based on their goals and preferences.",
+    "Individual approach – we develop a unique design for each client, taking into account business goals and wishes.",
     "Transparent communication — we're always in touch and explain the process in simple terms.",
-    "Modern design — we follow current UI/UX trends to make your site stylish and effective.",
-    "Flexible pricing — we offer solutions that match your budget without compromising quality.",
-    "Speed and simplicity — our websites load fast and remain clean and lightweight."
+    "Modern design – we follow UI/UX trends to make your site look stylish and work efficiently.",
+    "Flexible prices – we will find a solution to fit your budget without sacrificing quality.",
+    "Speed ​​and ease – our sites load quickly and are not overloaded with unnecessary elements."
   ]
 }
