--- a/public/locales/ua/advantages.json
+++ b/public/locales/ua/advantages.json
@@ -1,9 +1,9 @@
 {
   "items": [
-    "Індивідуальний підхід — створюємо унікальний дизайн для кожного клієнта з урахуванням цілей і побажань.",
-    "Прозора комунікація — завжди на зв’язку, пояснюємо процес просто та зрозуміло.",
-    "Сучасний дизайн — дотримуємося актуальних трендів UI/UX для стильного та ефективного сайту.",
-    "Гнучке ціноутворення — підбираємо рішення відповідно до вашого бюджету без втрати якості.",
-    "Швидкість і легкість — сайти завантажуються миттєво і не перевантажені зайвим."
+    "Індивідуальний підхід – розробляємо унікальний дизайн під кожного клієнта, враховуючи цілі бізнесу та побажання.",
+    "Прозора комунікація – завжди на зв’язку, пояснюємо процес просто та зрозуміло.",
+    "Сучасний дизайн – слідкуємо за трендами UI/UX, щоб ваш сайт виглядав стильно та працював ефективно.",
+    "Гнучкі ціни – підберемо рішення під ваш бюджет без втрати якості.",
+    "Швидкість та легкість – наші сайти завантажуються швидко й не перевантажені зайвими елементами."
   ]
 }
