--- a/public/locales/ua/common.json
+++ b/public/locales/ua/common.json
@@ -10,6 +10,8 @@
 
   "services_title": "Компексні послуги для онлайн присутності",
 
+  "processes_title": "Етапи роботи",
+
   "about_title": "Про нас",
 
   "advantages_title": "Чому саме ми?",
