--- a/public/locales/ua/services.json
+++ b/public/locales/ua/services.json
@@ -53,12 +53,20 @@
     {
       "title": "Веб додатки",
       "text": "Розробка веб-додатків будь-якої складності- від особистих кабінетів до CRM систем.",
-      "description": [
-        "?????????????",
-        "?????????????",
-        "??????????????????",
-        "?????????????"
-      ]
+      "description": {
+        "paragraphs": [
+          "Веб-додаток — це ефективний інструмент автоматизації процесів, покращення сервісу та розвитку цифрових продуктів.",
+          "Створюємо функціональні та масштабовані веб-додатки під конкретні задачі вашого бізнесу. Це можуть бути системи керування контентом, особисті кабінети, онлайн-сервіси, CRM/ERP-рішення, внутрішні корпоративні платформи та інше."
+        ],
+        "listTitle": "Ми забезпечуємо:",
+        "list": [
+          "індивідуальний підхід до архітектури та дизайну;",
+          "зручний та інтуїтивний інтерфейс для користувачів;",
+          "адаптивність під усі пристрої;",
+          "захищену авторизацію та управління даними;",
+          "інтеграцію з API, платіжними системами, базами даних."
+        ]
+      }
     }
   ]
 }
