added tooltip for mobile

--- a/public/locales/ua/common.json
+++ b/public/locales/ua/common.json
@@ -18,6 +18,7 @@
 
   "projects_title": "Наші проєкти",
   "view_project": "Переглянути проєкт",
+  "swipe_hint": "Гортайте, щоб побачити всі проекти",
 
   "consultation_title": "Отримайте безкоштовну консультацію",
   "name": "Ваше ім'я*",
