--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -18,6 +18,7 @@
 
   "projects_title": "Our Projects",
   "view_project": "View Project",
+  "swipe_hint": "Swipe to view all projects",
 
   "consultation_title": "Get a free consultation",
   "name": "Your Name*",
